# rs-svc

./: Cargo.toml  LICENSE  README.md
examples/: MyService.rs
src/: lib.rs
src/svc/: service.rs
